@@ -2,6 +2,9 @@ Revision history for Perl extension Foo.
 
 {{$NEXT}}
 
+  - MySQL storage: more documentation and minor
+                   method renaming.
+
 0.09      2012-05-08 09:15:17 Europe/Berlin
 
   - MySQL storage: reconnect logic (with exp. backoff)
